--- a/include/include.html
+++ b/include/include.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>libopenlpc81x/</title>
-<link href="stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
-</head>
-<body>
+<title>include/</title>
+<link href="../stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
+  </head>
+
+  <body>
+
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -19,24 +21,22 @@
             </section>
         </header>
     </div>
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-<h1><a href="index.html#files">libopenlpc81x</a>/
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+<h1><a href="../libopenlpc81x.html">libopenlpc81x</a>/
+include/
 </h1>
 <pre>
-|-- <a href="Makefile.html">Makefile</a>
+|-- <a href="mmio.h.html">mmio.h</a>
+|-- <a href="syscall.h.html">syscall.h</a>
 |
-|
-|-- examples/ --- nxp_lpc/ --- lpc81x/ --- <!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/<!/a>
-|
-|-- <a href="include/include.html">include/</a> --- nxp_lpc/ --- <a href="include/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a>
-|
-|-- lib/ --- nxp_lpc/ --- <!a href="lib/nxp_lpc/lpc81x/lpc81x.html">lpc81x/<!/a> --- <!a href="lib/nxp_lpc/lpc81x/ldscripts/ldscripts.html">ldscripts/<!/a>
-|
-`-- tools/ --- nxp_lpc/ --- lpc81x/ --- <!a href="tools/nxp_lpc/lpc81x/usart-util/usart-util.html">usart-util/<!/a>
+`-- nxp_lpc/ --- <a href="nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a>
 </pre>
-</section>
-</div>
+      </section>
+    </div>
+
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
@@ -44,5 +44,8 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-</body>
+
+    
+
+  </body>
 </html>
